Fixing weird scrollbar flicker when switching to the search tab

--- a/popup/tabfind.css
+++ b/popup/tabfind.css
@@ -49,6 +49,7 @@ html, body {
 /* Tab List Section */
 #tabs-list-wrapper {
 	margin-top: 10px;
+	height: 536px;
 }
 
 #tabs-list {
@@ -57,6 +58,10 @@ html, body {
 	overflow-y: auto;
 	padding: 0;
 	margin: 0;
+}
+
+#tabs-list.larger {
+	height: 536px;
 }
 
 #tabs-list li {
